# OmniBrain-AI-Operating-System

./: .env.example  .gitignore  Dockerfile  README.MD  docker-compose.yml  main.py  pyproject.toml  worker.py
app/agents/: __init__.py  checkpointer.py  graph.py  state.py
app/agents/nodes/: __init__.py  critic.py  executor.py  healer.py  human_interrupt.py  planner.py
app/api/: deps.py  router.py
app/api/endpoints/: memory.py  tasks.py  ws.py
app/core/: config.py  database.py  exceptions.py  logging.py
app/db/: __init__.py  models.py  repositories.py
app/llm/: __init__.py  prompts.py  router.py
app/memory/: __init__.py  graph_store.py  manager.py  vector_store.py
app/observability/: __init__.py  tracing.py
app/schemas/: __init__.py  agents.py  api.py  memory.py
app/tools/: __init__.py  base.py  mcp_manager.py
app/tools/implementations/: __init__.py  code_interpreter.py  web_scraper.py
tests/integration/: test_graph.py  test_memory.py
tests/unit/: test_router.py  test_tools.py
